// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`v-on > complex member expression w/ prefixIdentifiers: true 1`] = `
"import { recordMetadata as _recordMetadata, eventHandler as _eventHandler, delegateEvents as _delegateEvents, template as _template } from 'vue/vapor';
const t0 = _template("<div></div>")
_delegateEvents("click")

export function render(_ctx) {
  const n0 = t0()
  _recordMetadata(n0, "events", "click", _eventHandler(() => _ctx.a['b' + _ctx.c]))
  return n0
}"
`;

exports[`v-on > dynamic arg 1`] = `
"import { renderEffect as _renderEffect, on as _on, template as _template } from 'vue/vapor';
const t0 = _template("<div></div>")

export function render(_ctx) {
  const n0 = t0()
  _renderEffect(() => _on(n0, _ctx.event, () => _ctx.handler))
  return n0
}"
`;

exports[`v-on > dynamic arg with complex exp prefixing 1`] = `
"import { renderEffect as _renderEffect, on as _on, template as _template } from 'vue/vapor';
const t0 = _template("<div></div>")

export function render(_ctx) {
  const n0 = t0()
  _renderEffect(() => _on(n0, _ctx.event(_ctx.foo), () => _ctx.handler))
  return n0
}"
`;

exports[`v-on > dynamic arg with prefixing 1`] = `
"import { renderEffect as _renderEffect, on as _on, template as _template } from 'vue/vapor';
const t0 = _template("<div></div>")

export function render(_ctx) {
  const n0 = t0()
  _renderEffect(() => _on(n0, _ctx.event, () => _ctx.handler))
  return n0
}"
`;

exports[`v-on > event modifier 1`] = `
"import { recordMetadata as _recordMetadata, eventHandler as _eventHandler, on as _on, delegateEvents as _delegateEvents, template as _template } from 'vue/vapor';
const t0 = _template("<a></a>")
const t1 = _template("<form></form>")
const t2 = _template("<div></div>")
const t3 = _template("<input>")
_delegateEvents("click", "contextmenu", "mouseup", "keyup")

export function render(_ctx) {
  const n0 = t0()
  const n1 = t1()
  const n2 = t0()
  const n3 = t2()
  const n4 = t2()
  const n5 = t0()
  const n6 = t2()
  const n7 = t3()
  const n8 = t3()
  const n9 = t3()
  const n10 = t3()
  const n11 = t3()
  const n12 = t3()
  const n13 = t3()
  const n14 = t3()
  const n15 = t3()
  const n16 = t3()
  const n17 = t3()
  const n18 = t3()
  const n19 = t3()
  const n20 = t3()
  const n21 = t3()
  _recordMetadata(n0, "events", "click", _eventHandler(() => _ctx.handleEvent, {
    modifiers: ["stop"]
  }))
  _on(n1, "submit", () => _ctx.handleEvent, undefined, {
    modifiers: ["prevent"]
  })
  _recordMetadata(n2, "events", "click", _eventHandler(() => _ctx.handleEvent, {
    modifiers: ["stop", "prevent"]
  }))
  _recordMetadata(n3, "events", "click", _eventHandler(() => _ctx.handleEvent, {
    modifiers: ["self"]
  }))
  _on(n4, "click", () => _ctx.handleEvent, { capture: true })
  _on(n5, "click", () => _ctx.handleEvent, { once: true })
  _on(n6, "scroll", () => _ctx.handleEvent, { passive: true })
  _recordMetadata(n7, "events", "contextmenu", _eventHandler(() => _ctx.handleEvent, {
    modifiers: ["right"]
  }))
  _recordMetadata(n8, "events", "click", _eventHandler(() => _ctx.handleEvent, {
    modifiers: ["left"]
  }))
  _recordMetadata(n9, "events", "mouseup", _eventHandler(() => _ctx.handleEvent, {
    modifiers: ["middle"]
  }))
  _recordMetadata(n10, "events", "contextmenu", _eventHandler(() => _ctx.handleEvent, {
    modifiers: ["right"]
  }))
  _recordMetadata(n11, "events", "keyup", _eventHandler(() => _ctx.handleEvent, {
    keys: ["enter"]
  }))
  _recordMetadata(n12, "events", "keyup", _eventHandler(() => _ctx.handleEvent, {
    keys: ["tab"]
  }))
  _recordMetadata(n13, "events", "keyup", _eventHandler(() => _ctx.handleEvent, {
    keys: ["delete"]
  }))
  _recordMetadata(n14, "events", "keyup", _eventHandler(() => _ctx.handleEvent, {
    keys: ["esc"]
  }))
  _recordMetadata(n15, "events", "keyup", _eventHandler(() => _ctx.handleEvent, {
    keys: ["space"]
  }))
  _recordMetadata(n16, "events", "keyup", _eventHandler(() => _ctx.handleEvent, {
    keys: ["up"]
  }))
  _recordMetadata(n17, "events", "keyup", _eventHandler(() => _ctx.handleEvent, {
    keys: ["down"]
  }))
  _recordMetadata(n18, "events", "keyup", _eventHandler(() => _ctx.handleEvent, {
    keys: ["left"]
  }))
  _recordMetadata(n19, "events", "keyup", _eventHandler(() => _ctx.submit, {
    modifiers: ["middle"]
  }))
  _recordMetadata(n20, "events", "keyup", _eventHandler(() => _ctx.submit, {
    modifiers: ["middle", "self"]
  }))
  _recordMetadata(n21, "events", "keyup", _eventHandler(() => _ctx.handleEvent, {
    modifiers: ["self"],
    keys: ["enter"]
  }))
  return [n0, n1, n2, n3, n4, n5, n6, n7, n8, n9, n10, n11, n12, n13, n14, n15, n16, n17, n18, n19, n20, n21]
}"
`;

exports[`v-on > function expression w/ prefixIdentifiers: true 1`] = `
"import { recordMetadata as _recordMetadata, eventHandler as _eventHandler, delegateEvents as _delegateEvents, template as _template } from 'vue/vapor';
const t0 = _template("<div></div>")
_delegateEvents("click")

export function render(_ctx) {
  const n0 = t0()
  _recordMetadata(n0, "events", "click", _eventHandler(() => e => _ctx.foo(e)))
  return n0
}"
`;

exports[`v-on > inline statement w/ prefixIdentifiers: true 1`] = `
"import { recordMetadata as _recordMetadata, eventHandler as _eventHandler, delegateEvents as _delegateEvents, template as _template } from 'vue/vapor';
const t0 = _template("<div></div>")
_delegateEvents("click")

export function render(_ctx) {
  const n0 = t0()
  _recordMetadata(n0, "events", "click", _eventHandler(() => $event => (_ctx.foo($event))))
  return n0
}"
`;

exports[`v-on > multiple inline statements w/ prefixIdentifiers: true 1`] = `
"import { recordMetadata as _recordMetadata, eventHandler as _eventHandler, delegateEvents as _delegateEvents, template as _template } from 'vue/vapor';
const t0 = _template("<div></div>")
_delegateEvents("click")

export function render(_ctx) {
  const n0 = t0()
  _recordMetadata(n0, "events", "click", _eventHandler(() => $event => {_ctx.foo($event);_ctx.bar()}))
  return n0
}"
`;

exports[`v-on > should NOT add a prefix to $event if the expression is a function expression 1`] = `
"import { recordMetadata as _recordMetadata, eventHandler as _eventHandler, delegateEvents as _delegateEvents, template as _template } from 'vue/vapor';
const t0 = _template("<div></div>")
_delegateEvents("click")

export function render(_ctx) {
  const n0 = t0()
  _recordMetadata(n0, "events", "click", _eventHandler(() => $event => {_ctx.i++;_ctx.foo($event)}))
  return n0
}"
`;

exports[`v-on > should NOT wrap as function if expression is already function expression (with Typescript) 1`] = `
"import { recordMetadata as _recordMetadata, eventHandler as _eventHandler, delegateEvents as _delegateEvents, template as _template } from 'vue/vapor';
const t0 = _template("<div></div>")
_delegateEvents("click")

export function render(_ctx) {
  const n0 = t0()
  _recordMetadata(n0, "events", "click", _eventHandler(() => (e: any): any => _ctx.foo(e)))
  return n0
}"
`;

exports[`v-on > should NOT wrap as function if expression is already function expression (with newlines) 1`] = `
"import { recordMetadata as _recordMetadata, eventHandler as _eventHandler, delegateEvents as _delegateEvents, template as _template } from 'vue/vapor';
const t0 = _template("<div></div>")
_delegateEvents("click")

export function render(_ctx) {
  const n0 = t0()
  _recordMetadata(n0, "events", "click", _eventHandler(() => 
      $event => {
        _ctx.foo($event)
      }
    ))
  return n0
}"
`;

exports[`v-on > should NOT wrap as function if expression is already function expression 1`] = `
"import { recordMetadata as _recordMetadata, eventHandler as _eventHandler, delegateEvents as _delegateEvents, template as _template } from 'vue/vapor';
const t0 = _template("<div></div>")
_delegateEvents("click")

export function render(_ctx) {
  const n0 = t0()
  _recordMetadata(n0, "events", "click", _eventHandler(() => $event => _ctx.foo($event)))
  return n0
}"
`;

exports[`v-on > should NOT wrap as function if expression is complex member expression 1`] = `
"import { recordMetadata as _recordMetadata, eventHandler as _eventHandler, delegateEvents as _delegateEvents, template as _template } from 'vue/vapor';
const t0 = _template("<div></div>")
_delegateEvents("click")

export function render(_ctx) {
  const n0 = t0()
  _recordMetadata(n0, "events", "click", _eventHandler(() => _ctx.a['b' + _ctx.c]))
  return n0
}"
`;

exports[`v-on > should delegate event 1`] = `
"import { recordMetadata as _recordMetadata, eventHandler as _eventHandler, delegateEvents as _delegateEvents, template as _template } from 'vue/vapor';
const t0 = _template("<div></div>")
_delegateEvents("click")

export function render(_ctx) {
  const n0 = t0()
  _recordMetadata(n0, "events", "click", _eventHandler(() => _ctx.test))
  return n0
}"
`;

exports[`v-on > should handle multi-line statement 1`] = `
"import { recordMetadata as _recordMetadata, eventHandler as _eventHandler, delegateEvents as _delegateEvents, template as _template } from 'vue/vapor';
const t0 = _template("<div></div>")
_delegateEvents("click")

export function render(_ctx) {
  const n0 = t0()
  _recordMetadata(n0, "events", "click", _eventHandler(() => $event => {
_ctx.foo();
_ctx.bar()
}))
  return n0
}"
`;

exports[`v-on > should handle multiple inline statement 1`] = `
"import { recordMetadata as _recordMetadata, eventHandler as _eventHandler, delegateEvents as _delegateEvents, template as _template } from 'vue/vapor';
const t0 = _template("<div></div>")
_delegateEvents("click")

export function render(_ctx) {
  const n0 = t0()
  _recordMetadata(n0, "events", "click", _eventHandler(() => $event => {_ctx.foo();_ctx.bar()}))
  return n0
}"
`;

exports[`v-on > should not prefix member expression 1`] = `
"import { recordMetadata as _recordMetadata, eventHandler as _eventHandler, delegateEvents as _delegateEvents, template as _template } from 'vue/vapor';
const t0 = _template("<div></div>")
_delegateEvents("click")

export function render(_ctx) {
  const n0 = t0()
  _recordMetadata(n0, "events", "click", _eventHandler(() => _ctx.foo.bar))
  return n0
}"
`;

exports[`v-on > should not wrap keys guard if no key modifier is present 1`] = `
"import { recordMetadata as _recordMetadata, eventHandler as _eventHandler, delegateEvents as _delegateEvents, template as _template } from 'vue/vapor';
const t0 = _template("<div></div>")
_delegateEvents("keyup")

export function render(_ctx) {
  const n0 = t0()
  _recordMetadata(n0, "events", "keyup", _eventHandler(() => _ctx.test, {
    modifiers: ["exact"]
  }))
  return n0
}"
`;

exports[`v-on > should support multiple events and modifiers options w/ prefixIdentifiers: true 1`] = `
"import { recordMetadata as _recordMetadata, eventHandler as _eventHandler, delegateEvents as _delegateEvents, template as _template } from 'vue/vapor';
const t0 = _template("<div></div>")
_delegateEvents("click", "keyup")

export function render(_ctx) {
  const n0 = t0()
  _recordMetadata(n0, "events", "click", _eventHandler(() => _ctx.test, {
    modifiers: ["stop"]
  }))
  _recordMetadata(n0, "events", "keyup", _eventHandler(() => _ctx.test, {
    keys: ["enter"]
  }))
  return n0
}"
`;

exports[`v-on > should support multiple modifiers and event options w/ prefixIdentifiers: true 1`] = `
"import { on as _on, template as _template } from 'vue/vapor';
const t0 = _template("<div></div>")

export function render(_ctx) {
  const n0 = t0()
  _on(n0, "click", () => _ctx.test, { capture: true, once: true }, {
    modifiers: ["stop", "prevent"]
  })
  return n0
}"
`;

exports[`v-on > should transform click.middle 1`] = `
"import { recordMetadata as _recordMetadata, eventHandler as _eventHandler, delegateEvents as _delegateEvents, template as _template } from 'vue/vapor';
const t0 = _template("<div></div>")
_delegateEvents("mouseup")

export function render(_ctx) {
  const n0 = t0()
  _recordMetadata(n0, "events", "mouseup", _eventHandler(() => _ctx.test, {
    modifiers: ["middle"]
  }))
  return n0
}"
`;

exports[`v-on > should transform click.middle 2`] = `
"import { renderEffect as _renderEffect, on as _on, template as _template } from 'vue/vapor';
const t0 = _template("<div></div>")

export function render(_ctx) {
  const n0 = t0()
  _renderEffect(() => {
    _on(n0, (_ctx.event) === "click" ? "mouseup" : (_ctx.event), () => _ctx.test, undefined, {
      modifiers: ["middle"]
    })
  })
  return n0
}"
`;

exports[`v-on > should transform click.right 1`] = `
"import { recordMetadata as _recordMetadata, eventHandler as _eventHandler, delegateEvents as _delegateEvents, template as _template } from 'vue/vapor';
const t0 = _template("<div></div>")
_delegateEvents("contextmenu")

export function render(_ctx) {
  const n0 = t0()
  _recordMetadata(n0, "events", "contextmenu", _eventHandler(() => _ctx.test, {
    modifiers: ["right"]
  }))
  return n0
}"
`;

exports[`v-on > should transform click.right 2`] = `
"import { renderEffect as _renderEffect, on as _on, template as _template } from 'vue/vapor';
const t0 = _template("<div></div>")

export function render(_ctx) {
  const n0 = t0()
  _renderEffect(() => {
    _on(n0, (_ctx.event) === "click" ? "contextmenu" : (_ctx.event), () => _ctx.test, undefined, {
      modifiers: ["right"],
      keys: ["right"]
    })
  })
  return n0
}"
`;

exports[`v-on > should wrap as function if expression is inline statement 1`] = `
"import { recordMetadata as _recordMetadata, eventHandler as _eventHandler, delegateEvents as _delegateEvents, template as _template } from 'vue/vapor';
const t0 = _template("<div></div>")
_delegateEvents("click")

export function render(_ctx) {
  const n0 = t0()
  _recordMetadata(n0, "events", "click", _eventHandler(() => $event => (_ctx.i++)))
  return n0
}"
`;

exports[`v-on > should wrap both for dynamic key event w/ left/right modifiers 1`] = `
"import { renderEffect as _renderEffect, on as _on, template as _template } from 'vue/vapor';
const t0 = _template("<div></div>")

export function render(_ctx) {
  const n0 = t0()
  _renderEffect(() => {
    _on(n0, _ctx.e, () => _ctx.test, undefined, {
      modifiers: ["left"],
      keys: ["left"]
    })
  })
  return n0
}"
`;

exports[`v-on > should wrap in unref if identifier is setup-maybe-ref w/ inline: true 1`] = `
"(() => {
  const n0 = t0()
  const n1 = t0()
  const n2 = t0()
  _recordMetadata(n0, "events", "click", _eventHandler(() => $event => (x.value=_unref(y))))
  _recordMetadata(n1, "events", "click", _eventHandler(() => $event => (x.value++)))
  _recordMetadata(n2, "events", "click", _eventHandler(() => $event => ({ x: x.value } = _unref(y))))
  return [n0, n1, n2]
})()"
`;

exports[`v-on > should wrap keys guard for keyboard events or dynamic events 1`] = `
"import { on as _on, template as _template } from 'vue/vapor';
const t0 = _template("<div></div>")

export function render(_ctx) {
  const n0 = t0()
  _on(n0, "keydown", () => _ctx.test, { capture: true }, {
    modifiers: ["stop", "ctrl"],
    keys: ["a"]
  })
  return n0
}"
`;

exports[`v-on > should wrap keys guard for static key event w/ left/right modifiers 1`] = `
"import { recordMetadata as _recordMetadata, eventHandler as _eventHandler, delegateEvents as _delegateEvents, template as _template } from 'vue/vapor';
const t0 = _template("<div></div>")
_delegateEvents("keyup")

export function render(_ctx) {
  const n0 = t0()
  _recordMetadata(n0, "events", "keyup", _eventHandler(() => _ctx.test, {
    keys: ["left"]
  }))
  return n0
}"
`;

exports[`v-on > simple expression 1`] = `
"import { recordMetadata as _recordMetadata, eventHandler as _eventHandler, delegateEvents as _delegateEvents, template as _template } from 'vue/vapor';
const t0 = _template("<div></div>")
_delegateEvents("click")

export function render(_ctx) {
  const n0 = t0()
  _recordMetadata(n0, "events", "click", _eventHandler(() => _ctx.handleClick))
  return n0
}"
`;
